app/assets/stylesheets/pages/_dashboard.scss
.dashboard-title h3 {
  margin-top: 33px;
  text-align: left;
  font-weight: bold;
  font-size: 30px;
}

.margin-top {
  margin-top: 80px;
  width: 105%;
}

.avatar-big {
  border-radius: 50%;
  margin-top: 30px;
  height: 70px;
  width: 70px;
}

@media (max-width: 991px) {
  .d-flex.row .col-1 {
    flex: 0 0 12%;
  }

  .d-flex.row .col-11 {
    flex: 0 0 88%;
  }
}

/* For less than 768px */
@media (max-width: 768px) {
  .d-flex.row .col-1 {
    flex: 0 0 16%;
  }

  .d-flex.row .col-11 {
    flex: 0 0 84%;
  }
}

/* For less than 575px */
@media (max-width: 575px) {
  .d-flex.row .col-1 {
    flex: 0 0 18%;
  }

  .d-flex.row .col-11 {
    flex: 0 0 82%;
    margin-top: 5px;
  }
}

@media (max-width: 391px) {
  .d-flex.row .col-1 {
    flex: 0 0 22%;
  }

  .d-flex.row .col-11 {
    flex: 0 0 78%;
  }
}

.computer-booking-container {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.computer-booking-container li {
  font-size: 16px;
  margin-left: -12px;
}

.computer-booking-container img {
  height: 107px;
  width: 100%;
}

.bookings-box, .computers-box {
  border-radius: 8px;
  font-size: 25px;
}

.plus-sign {
  font-size: 25px;
  margin-left: 5px;
  position: relative;
  top: -2px;
}

.entry-row {
  height: 129px;
  width: 100%;
  background-color: #141414;
  margin-bottom: 3px;
  padding: 10px 0;
}

@media (max-width: 575px) {
  .entry-row {
    width: 107%;
  }
}

.icons {
  flex-direction: column;
  justify-content: space-evenly;
  align-items: left;
  height: 90%;
  text-decoration: none;
}

.balance {
  font-size: 16px;
  margin-top: 10px;
}

.no-laptop {
  font-size: 16px;
}

.no-laptop ul {
  margin-left: 12px;
}

.add-laptop-link {
  color: $electric-blue;
  text-decoration: none;
}

.add-laptop-link:hover {
  color: $electric-blue-hover;
  transition: color 0.3s ease;
}

.fa-solid {
  text-decoration: none;
}

.fa-pencil {
  color: $mindaro;
}

.fa-pencil:hover {
  color: #d1d930;
  transition: color 0.3s ease;
}

.fa-trash-can {
  color: $fuchsia;
}

.fa-trash-can:hover {
  color: #8e294b;
  transition: color 0.3s ease;
}

@media (max-width: 575px) {
  .dashboard .entry-row {
    margin-top: -6px;
  }
  .dashboard .col-6 {
    margin-top: 10px;
  }
  .dashboard h3 {
    font-size: 22px !important;
    white-space: nowrap;
  }
  .dashboard p, .dashboard li {
    font-size: 12px !important;
    white-space: nowrap;
  }
  .dashboard .plus-sign {
    font-size: 18px !important;
  }
}

@media(min-width: 1400px) {
  .margin-top {
    width: 101%;
    margin-left: 13px;
  }
}

